makko/default/dashy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashy
spec:
  selector:
    app: dashy
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP
