makko/default/dashy/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dashy
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      sectionName: https
  hostnames:
    - "dashy.senk0.com"
  rules:
    - backendRefs:
        - name: dashy
          port: 8080
